# SDC-cplusplus-Study-Team1

./: README.md
Board/: CMakeLists.txt  main.cpp
Board/account/controller/: AccountController.cpp  AccountController.h
Board/account/controller/request_form/: AccountLoginRequestForm.cpp  AccountLoginRequestForm.h  AccountRegisterRequestForm.cpp  AccountRegisterRequestForm.h
Board/account/controller/response_form/: AccountLoginResponseForm.cpp  AccountLoginResponseForm.h  AccountRegisterResponseForm.cpp  AccountRegisterResponseForm.h
Board/account/entity/: Account.cpp  Account.h
Board/account/repository/: AccountRepository.h  AccountRepositoryImpl.cpp  AccountRepositoryImpl.h
Board/account/service/: AccountService.h  AccountServiceImpl.cpp  AccountServiceImpl.h
Board/account/service/request/: AccountLoginRequest.cpp  AccountLoginRequest.h  AccountRequest.cpp  AccountRequest.h
Board/account/service/response/: AccountLoginResponse.cpp  AccountLoginResponse.h  AccountResponse.h
Board/board/controller/: BoardController.h
Board/board/entity/: Board.cpp
Board/board/repository/: BoardRepositoryImpl.cpp
Board/board/service/: BoardService.h
Board/console/user_keyboard/: user_keyboard_input.cpp  user_keyboard_input.h
Board/console/window/: console_window.cpp  console_window.h
Board/mysql/: DbProcess.cpp  DbProcess.h
Board/tests/gogo/: CMakeLists.txt  gtest_main.cpp
Board/ui/console/service/: UiService.h  UiServiceImpl.cpp  UiServiceImpl.h
Board/ui/console/service/UiAccount/: UiAccount.h  UiAccountImpl.cpp  UiAccountImpl.h
Board/ui/console/service/UiBoard/: UiBoard.h  UiBoardImpl.cpp  UiBoardImpl.h
Board/ui/console/service/handler/create/: UiServiceCreateHandler.cpp  UiServiceCreateHandler.h
Board/ui/console/service/handler/create_account/: UiServiceCreateAccountHandler.cpp  UiServiceCreateAccountHandler.h
Board/ui/console/service/handler/exit/: UiServiceExitHandler.cpp  UiServiceExitHandler.h
Board/ui/console/service/handler/modify/: UiServiceModifyHandler.cpp  UiServiceModifyHandler.h
Board/ui/console/service/handler/read/: UiServiceReadHandler.cpp  UiServiceReadHandler.h
Board/ui/console/service/handler/remove/: UiServiceRemoveHandler.cpp  UiServiceRemoveHandler.h
Board/ui/console/service/response/: UiResponse.cpp
Board/ui/console/user_keyboard/: user_keyboard_input.cpp  user_keyboard_input.h
Board/ui/console/window/: console_window.cpp
Board/ui/controller/: UiController.cpp  UiController.h  UiControllerCommand.h
Board/ui/repository/UiAccount/: UiAccount.h  UiAccountImpl.cpp  UiAccountImpl.h
Board/ui/repository/UiBoard/: UiBoard.h  UiBoardImpl.cpp  UiBoardImpl.h
Board/ui/service/: UiService.h  UiServiceImpl.cpp  UiServiceImpl.h
Board/ui/service/response/: UiResponse.h
Board/utility/: trim.cpp  trim.h
